Fixed header alignment issues

--- a/src/shared/SharedComponents/HeaderComponent/index.scss
+++ b/src/shared/SharedComponents/HeaderComponent/index.scss
@@ -13,11 +13,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 2 rem;
+  padding-left: 2rem;
+  padding-right: 1.2rem;
 }
 
 .i18-button {
-  margin-right: 30px;
+  margin: 1rem;
 }
 
 .menu {
